added more words in HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p class="first">Lorem ipsum, dolor elit. Dolore, ullam.</p>
     <p class="second">Lorem ipsum consectetur adipisicing. Eos architecto ullam?</p>
-    <p class="third">Lorem ipsum consectetur, adipisicing elit. Expedita quam reiciendis ipsum aliquam, cum tempora!</p>
-    <script src="./js/components/numberOfSentences.js" type="module"></script>
+    <p class="third">Lorem Ukmerges g. 289 and 291, or 293-12 consectetur, adipisicing elit. Expedita quam reiciendis ipsum aliquam, cum tempora!</p>
+    <script src="./js/components/numberOfWords.js" type="module"></script>
 </body>
 </html>
