--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p class="first">Lorem ipsum? 12 dolor elit. Dolore, ullam.</p>
-    <p class="second">Lorem ipsum 6 consectetur adipisicing. Eos architecto 16 ullam?</p>
+    <p class="second">Lorem ipsum 6 Laimonas sakinysbaigtas. 25 Masionis ullam?</p>
     <p class="third">Lorem Ukmerges g. 289 and 291, or -293 consectetur, adipisicing elit. Expedita quam reiciendis ipsum aliquam, cum tempora!</p>
     <script src="./js/main.js" type="module"></script>
 </body>
